--- a/survey-creator-manager/app/globals.css
+++ b/survey-creator-manager/app/globals.css
@@ -2,16 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body {
-  padding: 20px 20px 60px;
-  max-width: 680px;
-  margin: 0 auto;
-}
-
 /*       This is the CSS for the login page       */
 .container {
-  max-width:60%;
+  max-width: 60%;
   width: 600px;
   height: 50%;
   padding: 20px 40px;
@@ -22,7 +15,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,15 +52,13 @@ button {
   transition: background-color 0.3s ease;
 }
 
-
 button:hover {
   background-color: #cdcdcd;
 }
 
-
 /*       This is the CSS for the signup page       */
-.signupContainer{
-  max-width:60%;
+.signupContainer {
+  max-width: 60%;
   width: 600px;
   height: 700px;
   max-height: 70%;
@@ -79,7 +70,7 @@ button:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
